[metadata]
name = anyGPT
version = 0.0.1a2
description = A general purpose library for training any type of GPT model. Support for gpt-1, gpt-2, and gpt-3 models.
long_description = file: docs/README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM

[options]
package_dir=
    =src
packages=find:
install_requires =
    torch >= 2.0.0
    numpy
    transformers
    datasets
    tiktoken
    wandb
    tqdm
    PyYAML
    lightning
    tensorboard


[options.packages.find]
where=src

[options.entry_points]
console_scripts=
    anygpt-prepare-data = anyGPT.data.prepare_data:main
    anygpt-train = anyGPT.training.train:main
    anygpt-run = anyGPT.inference.run:main

[options.extras_require]
dev =
    black==23.3.0
    pytest
    build
    twine